# aws-cost-dashboard

./: .gitignore  .replit  Aagdaimlertruckdemo-costs.xlsx  Aagdstrainingberlin-costs.xlsx  Aagopenaiaok-costs.xlsx  Aagopenainkg-costs.xlsx  Aagopenaiw5bg-costs.xlsx  Aagsenecaasn9-costs.xlsx  Aagsenecax7rq-costs.xlsx  DEPLOYMENT_GUIDE.md  README.md  aag259openai-costs.xlsx  aagairlinesurveyassist-costs.xlsx  aagc8gopenai-costs.xlsx  aagdanskedemoe5d-costs.xlsx  aagdemol8fq-costs.xlsx  aage9fq-costs.xlsx  aagexpertcalls-costs.xlsx  aagf8i-costs.xlsx  aagfsclientcodeassist-costs.xlsx  aagh2nb-costs.xlsx  aagh7tbairlinesurvey-costs.xlsx  aagh7tbsurveyassistant-costs.xlsx  aagindustrial-costs.xlsx  aaginsdemo-costs.xlsx  aagm5jj-costs.xlsx  aagopenai765-costs.xlsx  aagopenaiaok2-costs.xlsx  aagopenair3uy-costs.xlsx  aagopenaix7rq-costs.xlsx  aagpromotool-costs.xlsx  aagsandboxdev01-costs.xlsx  aagskillstracker-costs.xlsx  aagstaffing-costs.xlsx  aagtelstrausage-costs.xlsx  app.py  cleaned_final_combined_costs.xlsx  final_all_combined_costs.xlsx  pyproject.toml  requirements.txt
